Disable reproducible builds for this package as workaround for https://issues.apache.org/jira/browse/JCRVLT-699

--- a/app1-apps/pom.xml
+++ b/app1-apps/pom.xml
@@ -12,6 +12,11 @@
   <artifactId>app1-apps</artifactId>
   <packaging>content-package</packaging>
 
+  <properties>
+    <!-- Disable reproducible builds for this package as workaround for https://issues.apache.org/jira/browse/JCRVLT-699 -->
+    <project.build.outputTimestamp></project.build.outputTimestamp>
+  </properties>
+
   <build>
     <plugins>
       <plugin>
